--- a/apps/templates/pages/tool/RelativeDensity.html
+++ b/apps/templates/pages/tool/RelativeDensity.html
@@ -10,6 +10,11 @@
 {% endblock stylesheets %}
 {% block content %}
 <style>
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    }
     #container {
         position: relative;
         display: none;  
@@ -169,11 +174,7 @@
                                 </div>
                             </form>
                             <div class="row tool-form">
-                                <div class="col-md-2">
-                                    <div class="card-header">
-                                    </div>
-                                </div>
-                                <div class="col-md-8">
+                                <div class="col-md-7">
                                     <div class="row ">
                                         <div class="col-md-12">
                                             <div class="form-group has-default bmd-form-group">
@@ -201,8 +202,10 @@
                                         <button class="btn btn-rose" type="button" onclick="Calculate()">Calculate</button>
                                     </div>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-5">
                                     <div class="card-header">
+                                        <div id="plot">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -268,7 +271,10 @@
     };
 
 </script>
-
+<script src="/static/assets/js/core/highchart/highcharts.js"></script>
+<script src="/static/assets/js/core/highchart/exporting.js"></script>
+<script src="/static/assets/js/core/highchart/export-data.js"></script>
+<script src="/static/assets/js/core/highchart/accessibility.js"></script>
 <script>
     var y;
     var classification;
@@ -313,13 +319,15 @@
             var cell2 = row.insertCell(1);
             var cell3 = row.insertCell(2);
             var cell4 = row.insertCell(3);
-            cell1.innerHTML = '<select style=" text-align:center;" id="method_2" name="method_2">\
+            cell1.innerHTML = '<select style=" text-align:center; border = none; border-style: none;" id="method_2" name="method_2">\
+                <option hidden disabled selected value> -- select a method -- </option>\
                 <option value="Terzaghi">Terzaghi and Peck </option>\
                 <option value="Skempton">Skempton </option></select>';
             cell2.innerHTML = '\
             <div class="row">\
                 <div class="col-md-8">\
-                    <input  type="number" id="calculate" name="NSPT" min="0" max ="200" step="1" >\
+                    <input  type="number" style="text-align:center; border = none;border-style: none;" \
+                    id="calculate" name="NSPT" min="0" max ="200" step="1" placeholder="N">\
                 </div>\
                     <div id="container">\
                         <i class="material-icons error">error_outline</i>\
@@ -331,54 +339,110 @@
             cell3.innerHTML = '<p  name="dr" >';
             cell4.innerHTML = '<p name="classification" >';
           }
+    var chart_y_1 =[];
+    var chart_y_2 =[];
+    for (let i=0; i < 201; i++){
+        chart_y_1.push(get_dr_Terzaghi(i)[0]);
+        chart_y_2.push(get_dr_Skempton(i)[0]);
+    } 
+    var chart = new Highcharts.chart("plot", {
+        chart: {
+            type: 'line',
+            zoomType: 'xy'
+        },
+        title: {
+            text: "Relative Density"
+        },
+        xAxis: {
+            title: {
+                text: "N SPT",
+                enabled: true
+            }
+        },
+        yAxis: {
+            title: {
+                enabled: true,
+                text: "Relative Density"
+            }
+        },
+        credits: {
+            enabled: false
+        },
+        exporting: {
+            enabled: false
+        },
+        plotOptions: {
+            line: {enableMouseTracking: false
+            },
+            scatter: {
+                marker: {
+                    radius: 4,
+                    symbol: 'circle',
+                    }
+                },
+                
+        },
+        series: [{
+            name: 'Terzaghi and Peck',
+            data: chart_y_1
+          }, {
+            name: 'Skempton',
+            data: chart_y_2
+          }, {
+            type: 'scatter',
+            name: 'Your points',
+            data: []
+          }],
+
+    });
     function Calculate() {
-            var table = document.getElementById('table');
-            var methods = table.getElementsByTagName('select');
-            var items = table.getElementsByTagName('input');
-            var output_dr = document.getElementsByName('dr');
-            var output_class = document.getElementsByName('classification');
-            var rows = table.rows;
-            var nodeList = document.querySelectorAll("#container");
-            for(var i=0; i<items.length; i++){
-                if(methods[i].value == "Terzaghi"){
-                    result = get_dr_Terzaghi(items[i].value);
-                    y = result[0];
-                    if (typeof y == "number"){
-                        y=y.toFixed(2);
-                        output_dr[i].innerHTML = y;
-                        output_class[i].innerHTML = result[1];
-                        items[i].style.border = "thin solid black";
-                        rows[i+2].style.backgroundColor = "";
-                        nodeList[i].style.display = "none";
-                    }
-                    else{
-                        output_dr[i].innerHTML = "";
-                        output_class[i].innerHTML = "";
-                        rows[i+2].style.backgroundColor = "#FBBDB3";
-                        nodeList[i].style.display = "block";
-                        items[i].style.border = "thick solid red";
-                    }
+        var table = document.getElementById('table');
+        var methods = table.getElementsByTagName('select');
+        var items = table.getElementsByTagName('input');
+        var output_dr = document.getElementsByName('dr');
+        var output_class = document.getElementsByName('classification');
+        var rows = table.rows;
+        var nodeList = document.querySelectorAll("#container");
+        var plot_data = []; 
+        for(var i=0; i<items.length; i++){
+            if(methods[i].value == "Terzaghi"){
+                result = get_dr_Terzaghi(items[i].value);
+                y = result[0];
+                if (typeof y == "number"){
+                    y=y.toFixed(2);
+                    plot_data.push([parseInt(items[i].value), parseFloat(y)]);
+                    output_dr[i].innerHTML = y;
+                    output_class[i].innerHTML = result[1];
+                    rows[i+2].style.backgroundColor = "";
+                    nodeList[i].style.display = "none";
                 }
                 else{
-                    result = get_dr_Skempton(items[i].value);
-                    y = result[0];
-                    if (typeof y == "number"){
-                        y = y.toFixed(2);
-                        output_dr[i].innerHTML = y;
-                        output_class[i].innerHTML = result[1];
-                        items[i].style.border = "thin solid black";
-                        rows[i+2].style.backgroundColor = "";
-                        nodeList[i].style.display = "none";
-                    }
-                    else{
-                        output_dr[i].innerHTML = "";
-                        output_class[i].innerHTML = "";
-                        rows[i+2].style.backgroundColor = "#FBBDB3";
-                        nodeList[i].style.display = "block";
-                        items[i].style.border = "thick solid red";
-                    }
+                    output_dr[i].innerHTML = "";
+                    output_class[i].innerHTML = "";
+                    rows[i+2].style.backgroundColor = "#FBBDB3";
+                    nodeList[i].style.display = "block";
                 }
+            }
+            else if(methods[i].value == "Skempton"){
+                result = get_dr_Skempton(items[i].value);
+                y = result[0];
+                if (typeof y == "number"){
+                    y = y.toFixed(2);
+                    plot_data.push([parseInt(items[i].value), parseFloat(y)]);
+                    output_dr[i].innerHTML = y;
+                    output_class[i].innerHTML = result[1];
+                    rows[i+2].style.backgroundColor = "";
+                    nodeList[i].style.display = "none";
                 }
-        }
+                else{
+                    output_dr[i].innerHTML = "";
+                    output_class[i].innerHTML = "";
+                    rows[i+2].style.backgroundColor = "#FBBDB3";
+                    nodeList[i].style.display = "block";
+                }
+            }
+        };
+        chart.series[2].setData(plot_data);
+    }
 </script> 
 {% endblock javascripts %}
