--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">manage</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">manage_search</i>
                 <h5>Manage</h5>
                 <p>Manage your geodata in a
                   completely new way. Forget PDF
@@ -52,7 +52,7 @@
           <div class="row justify-content-start mt-4">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">payments</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">dataset_linked</i>
                 <h5>Store</h5>
                 <p>Store your geodata with us and let
                   deep data analysis turn your current
