--- a/apps/templates/pages/profile/details.html
+++ b/apps/templates/pages/profile/details.html
@@ -39,6 +39,8 @@
 <script src="/static/assets/js/core/highchart/exporting.js"></script>
 <script src="/static/assets/js/core/highchart/export-data.js"></script>
 <script src="/static/assets/js/core/highchart/accessibility.js"></script>
+<script src="https://code.highcharts.com/modules/pattern-fill.js"></script>
+<script src="https://code.highcharts.com/themes/high-contrast-light.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
 <script src="/static/assets/js/plugins/bootbox.min.js"></script>
 <script src="/static/custom/js/main.js"></script>
