--- a/apps/static/assets-landing/css/material-kit.css
+++ b/apps/static/assets-landing/css/material-kit.css
@@ -49,7 +49,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: , 128, 154;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
+  --bs-font-sans-serif: "Raleway", Helvetica, Arial, sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -192,6 +192,7 @@ h6,
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  color: #000;
 }
 
 abbr[title] {
@@ -22521,7 +22522,7 @@ label,
 }
 
 .footer .footer-logo {
-  max-width: 8rem;
+  max-width: 9rem;
 }
 
 .bg-gradient-primary {
