--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -26,11 +26,11 @@
           <form role="form" method="post">
             {% csrf_token %} 
             <div class="input-group input-group-outline my-3">
-              <label class="form-label">User Name</label>
+              <!-- <label class="form-label">User Name</label> -->
               {{ form.username }}
             </div>
             <div class="input-group input-group-outline mb-3">
-              <label class="form-label">Password</label>
+              <!-- <label class="form-label">Password</label> -->
               {{ form.password }}
             </div>
             <div class="text-center">
