--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg position-fixed top-0 z-index-3 w-100 my-3  ">
     <div class="container">
-      <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets/landing/images/logo-trans.png"
+      <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets-landing/img/logos/logo.png"
           style="width: 10rem;"></a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
         data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,12 +14,6 @@
       </button>
       <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0 ms-lg-12 ps-lg-5" id="navigation">
         <ul class="navbar-nav navbar-nav-hover ms-auto">
-          <li class="nav-item dropdown dropdown-hover mx-2 ms-lg-6">
-            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'landing' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >dashboard</i>
-              Home
-            </a>
-          </li>
 
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'blog' %}">
@@ -27,7 +21,13 @@
               Blog
             </a>
           </li>
-
+          <li class="nav-item dropdown dropdown-hover mx-2">
+            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'contactus' %}">
+              <i class="material-icons opacity-6 me-2 text-md" >
+                perm_contact_calendar</i>
+              Contact
+            </a>
+          </li>
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'register' %}">
               <i class="material-icons opacity-6 me-2 text-md" >person_add</i>
@@ -41,6 +41,8 @@
               Login
             </a>
           </li>
+
+         
         </ul>
       </div>
     </div>
