--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -33,6 +33,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="/static/assets-landing/css/material-kit.css?v=3.0.4" rel="stylesheet" />
+  {% block css %}{% endblock css %}
 </head>
 
 <body class="sign-in-basic">
@@ -49,12 +50,11 @@
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="{% url 'landing' %}">
-              <img src="/static/assets/landing/images/logo-trans.png" class="mb-3 footer-logo" alt="main_logo">
+              <img src="/static/assets-landing/img/logos/logo-vertical.jpg" class="mb-3 footer-logo" alt="main_logo">
             </a>
-            <h6 class="font-weight-bolder mb-4">Geo-Data Management</h6>
           </div>
-          <div>
-            <ul class="d-flex flex-row ms-n3 nav">
+          <div style="margin-left: 12%;">
+            <ul class="d-flex flex-row ms-n3 nav text-center">
               <!-- <li class="nav-item">
                 <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim/" target="_blank">
                   <i class="fab fa-facebook text-lg opacity-8"></i>
@@ -148,7 +148,7 @@
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="/static/assets-landing/js/material-kit.min.js?v=3.0.4" ></script>
-  <script>
+  <!-- <script>
     window.onscroll = function() {myFunction()};
     
     var navbar = document.getElementById("navbar");
@@ -161,7 +161,7 @@
         navbar.classList.remove("sticky");
       }
     }
-    </script>
+    </script> -->
 </body>
 
 </html>
