--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -40,7 +40,7 @@
                 geodata files or the files
                 you received.
               </p>
-              <a href="#" class="text-info text-sm icon-move-right">Read More
+              <a href="#" class="text-info text-sm icon-move-right">Coming Soon
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -67,7 +67,7 @@
                 ags
                 format) to excel
               </p>
-              <a href="#" class="text-info text-sm icon-move-right">Read More
+              <a href="#" class="text-info text-sm icon-move-right">Coming Soon
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
@@ -88,7 +88,7 @@
               <p>
                 Exlore your data, manage and decode in few minutes
               </p>
-              <a href="#" class="text-info text-sm icon-move-right">Read More
+              <a href="https://medium.com/@orycta" class="text-info text-sm icon-move-right" target="_blank">Read More
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
