--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -94,12 +94,12 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %} target="_blank">
+                <a class="nav-link" href="{% url 'blog' %}" target="_blank">
                   Tools
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}" target="_blank">
+                <a class="nav-link" href="{% url 'contactus' %}" target="_blank">
                   Contact Us
                 </a>
               </li>
