--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -88,7 +88,7 @@
               <p>
                 Exlore your data, manage and decode in few minutes
               </p>
-              <a href="https://medium.com/@orycta" class="text-info text-sm icon-move-right" target="_blank">Read More
+              <a href="{% url 'login' %}" class="text-info text-sm icon-move-right">Read More
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
               </a>
             </div>
