--- a/apps/templates/pages/contact.html
+++ b/apps/templates/pages/contact.html
@@ -67,27 +67,10 @@
             <h3>Get in touch</h3>
             <P>We provide In depth analysis of geotechnical data focusing on valuable, project specific insights.
               Interpretation made easy so that you can draw meaningful decisions and turn geotechnical risk into a
-              unique competitive advantage.</P><br>
-            <h6 style="margin-left: 15%;">Have an interesting project or want to know more?</h6>
-          </div>
-          <div class="agileits-contact-address">
-            <br>
-            <!-- <i class="material-icons">place</i><br>
-            <h5 class="contact-text">Visit Us:</h5>
-            <p>5th Avenue, London</p><br> -->
-            <div class="row">
-              <div class="col-lg-2"></div>
-              <div class="col-lg-4">
-                <i class="material-icons">phone</i><br>
-                <h5 class="contact-text">Call Us:</h5>
-                <p><a href="tel:+12 23456790">+971 544897702</a></p>
-              </div>
-              <div class="col-lg-4">
-                <i class="material-icons">mail</i><br>
-                <h5 class="contact-text">Mail Us:</h5>
-                <p><a href="mailto:info@example.com"> info@orycta.com</a></p>
-              </div>
-            </div>
+              unique competitive advantage.</P>
+              <P>Have an interesting project or want to know more? <br>
+            Mail Us:
+            <a href="mailto:info@example.com"> info@orycta.com</a></P>
           </div>
         </div>
         {{ form.media }}
