--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg position-fixed top-0 z-index-3 w-100 my-3  ">
     <div class="container">
-      <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets-landing/img/logos/logo.png"
+      <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets-landing/img/logos/logo.jpg"
           style="width: 10rem;"></a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
         data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,14 +18,7 @@
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'blog' %}">
               <i class="material-icons opacity-6 me-2 text-md" >view_day</i>
-              Blog
-            </a>
-          </li>
-          <li class="nav-item dropdown dropdown-hover mx-2">
-            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'contactus' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >
-                perm_contact_calendar</i>
-              Contact
+              Geo-tools
             </a>
           </li>
           <li class="nav-item dropdown dropdown-hover mx-2">
