--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -16,8 +16,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logo.png">
-  <link rel="" type="image/png" href="/static/assets-landing/img/logos/logo.png">
+  <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logo.jpg">
+  <link rel="" type="image/png" href="/static/assets-landing/img/logos/logo.jpg">
   <title>
     Geo-Data Management  {% block title %}{% endblock %}
   </title>
@@ -55,28 +55,13 @@
           </div>
           <div style="margin-left: 12%;">
             <ul class="d-flex flex-row ms-n3 nav text-center">
-              <!-- <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.facebook.com/CreativeTim/" target="_blank">
-                  <i class="fab fa-facebook text-lg opacity-8"></i>
-                </a>
-              </li> -->
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.linkedin.com/company/oryc" target="_blank">
+                <a class="nav-link pe-1" href="https://twitter.com/orycta" target="_blank">
                   <i class="fab fa-twitter text-lg opacity-8"></i>
                 </a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link pe-1" href="https://dribbble.com/creativetim" target="_blank">
-                  <i class="fab fa-dribbble text-lg opacity-8"></i>
-                </a>
-              </li> -->
-              <!-- <li class="nav-item">
-                <a class="nav-link pe-1" href="https://github.com/creativetimofficial" target="_blank">
-                  <i class="fab fa-github text-lg opacity-8"></i>
-                </a>
-              </li> -->
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.linkedin.com/company/oryc"
+                <a class="nav-link pe-1" href="https://www.linkedin.com/company/orycta/"
                   target="_blank">
                   <i class="fab fa-linkedin text-lg opacity-8"></i>
                 </a>
@@ -89,17 +74,17 @@
             <h6 class="text-sm">Resources</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}" target="_blank">
+                <a class="nav-link" href="{% url 'login' %}">
                   Geo-Data Platform
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog' %}" target="_blank">
+                <a class="nav-link" href="{% url 'blog' %}">
                   Tools
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'contactus' %}" target="_blank">
+                <a class="nav-link" href="{% url 'landing' %}#contact-section">
                   Contact Us
                 </a>
               </li>
@@ -111,14 +96,12 @@
             <h6 class="text-sm">Legal</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}"
-                  target="_blank">
+                <a class="nav-link" href="{% url 'login' %}">
                   Terms & Conditions
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}"
-                  target="_blank">
+                <a class="nav-link" href="{% url 'login' %}">
                   Privacy Policy
                 </a>
               </li>
