--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -1,5 +1,9 @@
 {% extends "layouts/base-landing.html" %}
-{% block title %} Landing {% endblock %}
+{% block meta %}
+  <title>Geo Tools</title>
+  <meta name="keywords" content="Geotechnical Tools, Orycta tools, Geo Library, AGS applications, Geotechnical Software, AGS Software, Geotechnical Analysis, Geotechnical calculators">
+<meta name="description" content="Geotechnical tools and on-line calculators. Interpretation made easy.">
+  {% endblock %}
 {% block stylesheets %}{% endblock stylesheets %}
 {% load static %}
 {% load widget_tweaks %}
