--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -1,5 +1,9 @@
 {% extends "layouts/base-landing.html" %}
-{% block title %}{% endblock %}
+{% block meta %}
+  <title>Orycta</title>
+  <meta name="keywords" content="Orycta, Orycta Data Management, Orycta Consulting, Orycta Geotechnical, AGS geotechnical data, Geotechnical Engineering Consulting, Geotechnical Automation">
+  <meta name="description" content="Orycta Data Management and Geoconsulting. In-depth analysis of geotechnical data. Unlock the science. Decode your geo-data.">
+  {% endblock %}
 {% block stylesheets %}{% endblock stylesheets %}
 {% load static %}
 {% load widget_tweaks %}
