--- a/apps/templates/layouts/base-login.html
+++ b/apps/templates/layouts/base-login.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="/static/assets-landing//img/apple-icon.png">
-  <link rel="icon" type="image/png" href="/static/assets-landing//img/favicon.png">
-  <title>
-    Geo-Data Management  {% block title %}{% endblock %}
-  </title>
+  <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="" type="image/png" href="/static/assets-landing/img/logos/logometa.jpg">
+  {% block meta %}
+  <title>Orycta</title>
+  <meta name="keywords" content="Orycta, Orycta Data Management, Orycta Consulting, Orycta Geotechnical, AGS geotechnical data, Geotechnical Engineering Consulting, Geotechnical Automation">
+  <meta name="description" content="Orycta Data Management and Geoconsulting. In-depth analysis of geotechnical data. Unlock the science. Decode your geo-data.">
+  {% endblock %}
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
