--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -23,6 +23,7 @@
   {% endblock %}
   <link rel="" sizes="76x76" href="/static/assets-landing/img/logos/logometa.jpg">
   <link rel="" type="image/png" href="/static/assets-landing/img/logos/logometa.jpg">
+  <link rel="shortcut icon" href="/static/assets-landing/img/logos/favicon.ico" type="image/x-icon">
   
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css"
