--- a/apps/templates/layouts/base-login.html
+++ b/apps/templates/layouts/base-login.html
@@ -17,6 +17,7 @@
   <!-- Nucleo Icons -->
   <link href="/static/assets-landing/css/nucleo-icons.css" rel="stylesheet" />
   <link href="/static/assets-landing/css/nucleo-svg.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="/static/assets-landing/img/logos/favicon.ico" type="image/x-icon">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
