desing and tools app

--- a/apps/templates/includes/landing/navbar.html
+++ b/apps/templates/includes/landing/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg position-fixed top-0 z-index-3 w-100 my-3  ">
     <div class="container">
       <a href="{% url 'landing' %}" class="w3-bar-item w3-wide"><img class="logo" src="/static/assets-landing/img/logos/logo.jpg"
-          style="width: 10rem;"></a>
+          style="width: 7rem;"></a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
         data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon mt-2">
@@ -14,19 +14,31 @@
       </button>
       <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0 ms-lg-12 ps-lg-5" id="navigation">
         <ul class="navbar-nav navbar-nav-hover ms-auto">
+          <li class="nav-item dropdown dropdown-hover mx-2">
+            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'landing' %}">
+              <i class="material-icons opacity-6 me-2 text-md" >image</i>
+              Home
+            </a>
+          </li>
 
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'blog' %}">
-              <i class="material-icons opacity-6 me-2 text-md" >view_day</i>
+              <i class="material-icons opacity-6 me-2 text-md" >poll</i>
               Geo-tools
             </a>
           </li>
           <li class="nav-item dropdown dropdown-hover mx-2">
+            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'landing' %}#contact-section">
+              <i class="material-icons opacity-6 me-2 text-md" >mail</i>
+              Contact
+            </a>
+          </li>
+          <!-- <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'register' %}">
               <i class="material-icons opacity-6 me-2 text-md" >person_add</i>
               Register
             </a>
-          </li>
+          </li> -->
 
           <li class="nav-item dropdown dropdown-hover mx-2">
             <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" href="{% url 'login' %}">
@@ -34,6 +46,8 @@
               Login
             </a>
           </li>
+
+          
 
          
         </ul>
