--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -47,7 +47,12 @@
           <ul class="nav">
             <li class="nav-item ">
               <a class="nav-link" href="{% url 'tools' %}">
-                <span class="sidebar-mini"> U </span><span class="sidebar-normal"> Tool Group one </span>
+                <span class="sidebar-mini"> G </span><span class="sidebar-normal"> General </span>
+              </a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="{% url 'tools' %}">
+                <span class="sidebar-mini"> I </span><span class="sidebar-normal"> Interpretation </span>
               </a>
             </li>
           </ul>
