--- a/apps/templates/layouts/base-landing.html
+++ b/apps/templates/layouts/base-landing.html
@@ -115,10 +115,10 @@
         <div class="col-12">
           <div class="text-center">
             <p class="text-dark my-4 text-sm font-weight-normal">
-              All rights reserved. Copyright ©
+              Orycta.com. All rights reserved. Copyright ©
               <script>
                 document.write(new Date().getFullYear())
-              </script> Geo-Data Management.
+              </script> 
             </p>
           </div>
         </div>
