--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -87,19 +87,17 @@
                 <h5>Manage</h5>
                 <p>Manage your geodata in a
                   completely new way. Forget PDF
-                  reports and manual data entries.</p>
+                  reports and manual data entries. Use dynamic visualization, streamline and standarize reporting.</p>
               </div>
             </div>
           </div>
           <div class="row justify-content-start mt-4">
             <div class="col-md-6">
               <div class="info">
-                <i class="material-icons text-3xl text-gradient text-info mb-3">dataset_linked</i>
+                <i class="material-icons text-3xl text-gradient text-info mb-3">save</i>
                 <h5>Store</h5>
-                <p>Store your geodata with us and let
-                  deep data analysis turn your current
-                  data into knowledge. Gain a
-                  competitive advantage.</p>
+                <p>Store your geodata with us  in secure and centerlize cloud database. 
+                  Harvest the power of deep data analysis and turn your current geo data into knowledge. Store to use, not to forget.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -149,7 +147,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-12">
           <div class="card card-blog card-background cursor-pointer">
-            <div class="full-background" style="background-image: url('/static/assets-landing/img/bg.jpg')"
+            <div class="full-background" style="background-image: url('/static/assets-landing/img/contacts.jpeg')"
               loading="lazy"></div>
             <div class="card-body">
               <div class="content-left text-start my-auto py-4">
@@ -193,8 +191,9 @@
     </div>
 </div>
 </section>
-
 </div>
+
+
 
 
 {% endblock content %}
