--- a/apps/templates/pages/tool/index.html
+++ b/apps/templates/pages/tool/index.html
@@ -26,7 +26,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link21" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
@@ -91,7 +91,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link31" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
@@ -179,7 +179,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link41" role="tablist">
-                  <i class="material-icons">schedule</i> Results
+                  <i class="material-icons">schedule</i> Status
                 </a>
               </li>
               <li class="nav-item">
